# MBC_HACK

./: DEMO_SCRIPT.md  README.md  TECHNICAL_SUMMARY.md
anchor/: Anchor.toml  Cargo.toml  package.json  tsconfig.json
anchor/programs/culture_passport/: Cargo.toml
anchor/programs/culture_passport/src/: lib.rs
anchor/programs/ticketing/: Cargo.toml
anchor/programs/ticketing/src/: lib.rs
anchor/tests/: culture_passport.test.ts  ticketing.test.ts
eventguard/: .gitignore  DEMO_SCRIPT.md  README.md  TECHNICAL_SUMMARY.md
eventguard/anchor/: Anchor.toml  Cargo.toml
eventguard/anchor/programs/culture_passport/: Cargo.toml
eventguard/anchor/programs/culture_passport/src/: lib.rs
eventguard/anchor/programs/ticketing/: Cargo.toml
eventguard/anchor/tests/: ticketing.test.ts
eventguard/frontend/: package.json  tsconfig.json
eventguard/frontend/src/app/: globals.css  layout.tsx  page.tsx
eventguard/frontend/src/components/: EventCard.tsx  TicketCard.tsx  WalletProvider.tsx
eventguard/frontend/src/lib/: solana.ts
eventguard/oracle-service/: package.json  tsconfig.json
eventguard/oracle-service/src/: index.ts  polymarket.ts  solana.ts
eventguard/oracle-service/tests/: oracle.test.ts
frontend/: eslint.config.mjs  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/organizer/: page.tsx
frontend/app/passport/: page.tsx
frontend/src/components/: BadgeCard.tsx  EventCard.tsx  TicketCard.tsx  WalletProvider.tsx
frontend/src/lib/: solana.ts
oracle-service/: index.ts  polymarket.ts  solana.ts
(+3 files in other folders)
