[package]
name = "ticketing"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ticketing"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
culture_passport = { path = "../culture_passport", features = ["cpi"] }
